rust/macros/tests/invalid/target/debug/deps/only_comma_rs-20cae59da23e0edc.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libonly_comma_rs-20cae59da23e0edc.rmeta: only-comma.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/only_comma_rs-20cae59da23e0edc.d: only-comma.rs Cargo.toml

only-comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
